2001-02-14  Katsumi Yamaoka <yamaoka@jpl.org>
        Committed by ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus.el (gnus-define-group-parameter): Fix.

2001-02-14 15:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus.el (gnus-define-group-parameter): Improved.

	* gnus-sum.el (charset): Define parameter.
	(ignored-charsets): Ditto.
	(gnus-summary-setup-default-charset): Use them.

	* gnus-start.el (gnus-read-descriptions-file): Use them.
	
	* gnus-cus.el (gnus-group-parameters): Remove them.

2001-02-14 00:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-sum.el (gnus-summary-print-article): Redo highlight.

2001-02-13 21:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-sum.el (gnus-summary-read-group-1): Remove 
	gnus-summary-set-local-parameters.
	(gnus-summary-setup-buffer): Put it here.

2001-02-13 20:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus.el (to-address): Define parameter.
	(to-list): Ditto.
	* gnus-art.el (article-hide-boring-headers): Use them.
	* gnus-msg.el (gnus-post-news): Ditto.
	* gnus-cus.el (gnus-group-parameters): Remove them.

2001-02-13 19:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-draft.el (gnus-draft-reminder): New.

	* gnus-art.el (gnus-sender-save-name): New.

2001-02-13 18:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mm-util.el (mm-mime-charset): Error message.

2001-02-13 11:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* message.el (message-check-news-body-syntax): Don't check mml lines.

2001-02-12 11:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-topic.el (gnus-subscribe-topics): Return nil if not
	subscribe.

	* gnus-start.el (gnus-call-subscribe-functions): New.
	(gnus-find-new-newsgroups): Use it.
	(gnus-ask-server-for-new-groups): Use it.
	(gnus-check-first-time-used): Use it.
	(gnus-subscribe-newsgroup-method): Grok a list of functions.
	(gnus-subscribe-options-newsgroup-method): Ditto.
	(gnus-subscribe-hierarchically): Return gnus-subscribe-newsgroup's
	return .
